# Lab2_grafica

./: CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindSDL2.cmake
